logs/gkola-ws.log
Listing '.'...
Listing './bin'...
Compiling './bin/kola_http.py'...
***   File "./bin/kola_http.py", line 49
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Events-0.3.egg-info'...
Listing './lib/python3.5/site-packages/events'...
Listing './lib/python3.5/site-packages/events/tests'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/gevent_websocket-0.10.1.dist-info'...
Listing './lib/python3.5/site-packages/geventwebsocket'...
Listing './lib/python3.5/site-packages/geventwebsocket/gunicorn'...
Listing './lib/python3.5/site-packages/geventwebsocket/protocols'...
Listing './lib/python3.5/site-packages/gkola'...
Listing './lib/python3.5/site-packages/gkola-0.1.51.egg-info'...
Listing './lib/python3.5/site-packages/gkola_ws'...
Compiling './lib/python3.5/site-packages/gkola_ws/stream.py'...
***   File "./lib/python3.5/site-packages/gkola_ws/stream.py", line 94
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gkola_ws-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/kola'...
Compiling './lib/python3.5/site-packages/kola/callbacks_mixin.py'...
***   File "./lib/python3.5/site-packages/kola/callbacks_mixin.py", line 26
    raise Exception, 'repeat view_func for endpoint: %(endpoint)s, old_view_func:%(old_view_func)s, new_view_func: %(new_view_func)s' % dict(
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kola/connection.py'...
***   File "./lib/python3.5/site-packages/kola/connection.py", line 159
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kola/request.py'...
***   File "./lib/python3.5/site-packages/kola/request.py", line 30
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kola/utils.py'...
***   File "./lib/python3.5/site-packages/kola/utils.py", line 13
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kola-1.5.6.egg-info'...
Listing './lib/python3.5/site-packages/netkit'...
Compiling './lib/python3.5/site-packages/netkit/box.py'...
***   File "./lib/python3.5/site-packages/netkit/box.py", line 100
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netkit/contrib'...
Compiling './lib/python3.5/site-packages/netkit/contrib/tcp_client.py'...
***   File "./lib/python3.5/site-packages/netkit/contrib/tcp_client.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/netkit/stream.py'...
***   File "./lib/python3.5/site-packages/netkit/stream.py", line 214
    except socket.timeout, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/netkit-0.2.159.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
